# SoapySidekiq

./: .gitignore  CMakeLists.txt  FindSidekiq.cmake  README.md  Registation.cpp  Sensor.cpp  Settings.cpp  SoapySidekiq.hpp  Streaming.cpp  install.sh  remake.sh
tests/: SoapyGR.grc  cf32_test  counter  cs16_test  float  float2  peak.py  peak_scan  peak_scan2  rcv  rcv2  sinkGRint.grc  sink_test.grc  sourceGRfloat.grc  sourceGRint.grc  test_api  txtone
